--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">Impel Article</string>
+
+    <string name="confirm_string">Confirm</string>
+    <string name="exit_tittle_string">Do you want to Exit?</string>
+    <string name="ok_string">OK</string>
+    <string name="cancel_string">Cancel</string>
+    <string name="no">No</string>
+    <string name="no_internet">Please Connect To Internet</string>
+    <string name="wait_string">Loading</string>
+    <string name="something_went_wrong">Can Not Connect With Server</string>
+    <string name="admin_string">Contact With Admin</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
